2009-07-17T21:37  Sam Hocevar <sam@zoy.org>

	* gtkglarea/gtkglarea-sharp.metadata: mark GLArea.Size() as new in
        order to override GtkDrawingArea.Size().

2009-07-17T02:14  Sam Hocevar <sam@zoy.org>

	Overview: more complete and consistent Gapi detection.

	* configure.ac:
	- Check for gapi-parser / gapi2-parser.
	- Rename FIXUP and CODEGEN to GAPI_FIXUP and GAPI_CODEGEN
	* sources/Makefile.am gtkglarea/Makefile.am:
	- Reflect changes made to configure.ac.
	- Call $(GAPI_FIXUP) and $(GAPI_PARSER) instead of gapi2-fixup and
	gapi2-parser.

2009-07-17T01:53  Sam Hocevar <sam@zoy.org>

	Remove everything gtkglext until we really decide to support it; as
	of now, there are only empty files.

2009-07-17T01:48  Sam Hocevar <sam@zoy.org>

	Regenerate gtkglarea/generated/*.cs using a newer gapi.

2008-04-15T1507  Mike Kestner <mkestner@novell.com>

	* autogen.sh:  Patch from Sam Hocevar submitted to gtk#
	bug #371845.  Supports automake 1.10+.

2007-12-20T1709  C.J. Adams-Collier  <cjac@colliertech.org>

	Overview (from Sam Hocevar): patch for gtkglarea-sharp adds
	gtk_gl_area_share_new() to the list of bindings to allow sharing
	the GL context. This way one can share textures and display lists
	between GL contexts.

	* gtkglarea/GLArea.custom
	- created c'tor which accepts a share list
	* gtkglarea/generated/GLArea.cs
	- code generated from above

2007-12-20T1709  C.J. Adams-Collier  <cjac@colliertech.org>

	Overview (from Sam Hocevar): The gtkglarea-sharp package fails to
	properly detect the gapi tools, causing "make dist" to always
	fail.

	* configure.ac
	- changing positive check for xyes to negative check for xno

2007-12-20T1705  C.J. Adams-Collier  <cjac@colliertech.org>
	
	Overview (from Sam Hocevar): Minor issue in gtkglarea-sharp's
	PickWidget.cs: the right mouse button is ignored upon press, but
	not upon release, leading to weird behaviour.

	* examples/pick-object/PickWidget.cs
	- ignoring right mouse button on release
